# eacp

./: CLAUDE.md  CMakeLists.txt
Apps/: CMakeLists.txt
Apps/Console/Console/: CMakeLists.txt
Apps/GPU/: CMakeLists.txt
Apps/GPU/Paths/: Main.cpp
Apps/GPU/RotatingTriangle/: Main.cpp
Apps/GPU/Teapot/: Main.cpp
Apps/GPU/Triangle/: CMakeLists.txt  Main.cpp
Apps/HttpRpcDemo/: CMakeLists.txt  Schema.cpp  Schema.h  Server.cpp
Apps/Network/: CMakeLists.txt
Apps/Network/TcpClient/: Main.cpp
Apps/SwiftUI/: CMakeLists.txt
Apps/SwiftUI/SimpleSwiftUI/: CMakeLists.txt  Main.cpp
Apps/SwiftUI/SimpleSwiftUI/cpp/: CounterApi.h
Apps/SwiftUI/SimpleSwiftUI/swift/: RootView.swift
Apps/System/: CMakeLists.txt
Apps/System/AppHub/: AppHubApi-Windows.cpp  AppHubApi-macOS.mm  AppHubApi.h  AppHubInfo.plist.in  AppHubPlatform.h  CMakeLists.txt  HOSTING-ABSTRACTION-PLAN.md  Main.cpp  PrivilegedHelperClient-Unsupported.cpp  PrivilegedHelperClient-Windows.cpp  PrivilegedHelperClient-macOS.mm  PrivilegedHelperClient.h  REFACTOR-NOTES.md
Apps/System/AppHub/PrivilegedHelper/: Main.mm  MainWindows.cpp
Apps/System/AppHub/web/src/: App.tsx  style.css
Apps/System/JsonView/: CMakeLists.txt  Main.cpp  shared-json-view-demo-1.0.0.json  shared-json-view-demo-1.0.1.json
Apps/System/RealUpdateDemo/: CMakeLists.txt  Main.cpp
Apps/WebView/WebViewDragOut/: Main.cpp
Apps/WebView/WebViewReactAnim/web/src/: App.tsx
Apps/WebView/WebViewTodo/: CMakeLists.txt
Apps/WebView/WebViewTodo/Tests/: CMakeLists.txt  WebViewTodoTests.cpp
Apps/WebView/WebViewTodo/tests-node/: playwright.config.ts
Apps/WebView/WebViewTodo/web/: index.html
Apps/WebViewEmbed/: CMakeLists.txt  Commands.cpp  Main.cpp  Types.h
Apps/WebViewReactAnim/: CMakeLists.txt  Commands.cpp  Main.cpp  Types.h
Apps/WebViewReactAnim/web/: index.html  package-lock.json  package.json
Apps/WebViewReactAnim/web/src/: App.jsx  ShaderCanvas.jsx  bridge.js  bridge.ts  main.jsx  shader.js  style.css
Apps/WebViewTodo/: CMakeLists.txt  Commands.cpp  Main.cpp  Types.h
Apps/WebViewTodo/web/src/: App.tsx  state.ts  store.ts
CMake/: EacpSchema.cmake  FindWebView2.cmake  TargetSetup.cmake
Docs/: PrivilegedAppHubUpdaterPlan.md
Lib/: CMakeLists.txt
Lib/eacp/: CMakeLists.txt
Lib/eacp/Core/: CMakeLists.txt
Lib/eacp/Core/App/: App.cpp  App.h  AppEnvironment.h
Lib/eacp/Core/ObjC/: Strings.h  Strings.mm
Lib/eacp/Core/Process/: Process-Posix.cpp  Process-Windows.cpp  Process.cpp  Process.h
Lib/eacp/Core/Testing/: AsyncTest.h  CMakeLists.txt
Lib/eacp/Core/Threads/: Async.h  EventLoop-Windows.cpp  EventLoop-macOS.mm  EventLoop.h
Lib/eacp/Core/Utils/: Containers.h  File.cpp
Lib/eacp/GPU/: CMakeLists.txt  GPU.h
Lib/eacp/GPU/Buffer/: Buffer-Windows.cpp  Buffer-macOS.mm  Buffer.h
Lib/eacp/GPU/Codegen/: ShaderBuilder.h  ShaderEmitter.cpp  ShaderGraph.cpp  ShaderGraph.h  ShaderProgram.h  ShaderValue.h
Lib/eacp/GPU/Device/: Device-Windows.cpp  Device.h
Lib/eacp/GPU/Frame/: Frame-Windows.cpp  Frame-macOS.mm  Frame.h  RenderPass-Windows.cpp  RenderPass-macOS.mm  RenderPass.h
Lib/eacp/GPU/Pipeline/: RenderPipeline-Windows.cpp  RenderPipeline-macOS.mm  RenderPipeline.h
Lib/eacp/GPU/Shader/: ShaderLibrary-Windows.cpp  ShaderLibrary-macOS.mm  ShaderLibrary.h  ShaderSource.h
Lib/eacp/GPU/View/: GPUView-Windows.cpp  GPUView-macOS.mm  GPUView.h
Lib/eacp/GPU/Windows/: D3DTypes.h
Lib/eacp/GPUWidgets/: CMakeLists.txt  GPUWidgets.h
Lib/eacp/GPUWidgets/Path/: Path.cpp  PathTessellator.cpp  PathTessellator.h
Lib/eacp/GPUWidgets/View/: PathFillShader.h  PathView.cpp  PathView.h  VertexColorShader.h
Lib/eacp/Graphics/: CMakeLists.txt
Lib/eacp/Graphics/Graphics/: D2DFactory-Windows.cpp  Keyboard-Windows.cpp  Keyboard.h
Lib/eacp/Graphics/Image/: Image-Apple.mm  Image-Windows.cpp  Image.cpp  Image.h  ImageCodec.h  ImageOps.cpp  ImageOps.h
Lib/eacp/Graphics/View/: View-Windows.cpp  View.h
Lib/eacp/Graphics/Window/: Window-Windows.cpp  Window-macOS.mm  Window.h
Lib/eacp/Hub/: Hub.cpp  Hub.h
Lib/eacp/Network/: CMakeLists.txt
Lib/eacp/Network/HTTP/: Http-Linux.cpp  Http-Windows.cpp  Http.mm
Lib/eacp/Network/HTTPRpc/: RpcServer.cpp  RpcServer.h
Lib/eacp/Network/HTTPServer/: Json.h
Lib/eacp/Network/TCP/: Connection-Posix.cpp  Connection-Windows.cpp  Connection.h
Lib/eacp/SwiftUI/: CMakeLists.txt  SwiftUIBridge.h  SwiftUIDispatch.cpp  SwiftUIHost.h  SwiftUIView-Apple.mm  SwiftUIView.h
Lib/eacp/SwiftUI/cmake/: EacpSwiftUIApp.cmake
Lib/eacp/Updater/: Updater.cpp  Updater.h
Lib/eacp/WebView/: CMakeLists.txt
Lib/eacp/WebView/Codegen/: HooksFormat.cpp  Register.cpp
Lib/eacp/WebView/Generator/: Main.cpp
Lib/eacp/WebView/Test/: AppDriver.cpp  AppDriver.h
Lib/eacp/WebView/WebView/: Bridge.cpp  Bridge.h  EventRegistry.h  FileDrag.h  Snapshot-Apple.h  Snapshot-iOS.mm  Snapshot-macOS.mm  StateBridge.cpp  StateBridge.h  TestServer.cpp  WebView-Shared.cpp  WebView-Windows.cpp  WebView.h  WebView.mm  WebViewPlatform-Apple.h  WebViewPlatform-iOS.mm  WebViewPlatform-macOS.mm
Lib/eacp/WebView/WebView/Resources/: EacpBackend.ts.template  EacpHooks.ts.template  EacpReact.ts.template  bridge-shim.js
Lib/eacp/WebView/cmake/: EacpWebViewApp.cmake  EacpWebViewBackend.cmake  EacpWebViewReact.cmake  EacpWebViewTest.cmake  EacpWebViewVite.cmake
Scripts/: apphub-windows-install-smoke.ps1  apphub-windows-update-smoke.ps1  (+12 more)
Tests/: CMakeLists.txt
Tests/AppHub/: AppHubApiTests.cpp  CMakeLists.txt
Tests/Codegen/: CMakeLists.txt  InversionCodegenTests.cpp
Tests/Core/: AppTests.cpp  AsyncCoroutineTests.cpp  AsyncTestHelpersTests.cpp  AsyncTests.cpp  CMakeLists.txt  EventLoopTests.cpp  ProcessTests.cpp
Tests/GPU/: CMakeLists.txt  GPUSmokeTests.cpp  ShaderCodegenTests.cpp
Tests/GPUWidgets/: PathTests.cpp
Tests/Graphics/: ImageTests.cpp
Tests/Hub/: HubTests.cpp
Tests/Network/: CMakeLists.txt  HttpJsonTests.cpp  HttpRequestTests.cpp  HttpRpcTests.cpp  HttpServerTests.cpp
Tests/Updater/: CMakeLists.txt  PrivilegedInstallTests.cpp  UpdaterTests.cpp
Tests/WebView/: CMakeLists.txt  ProcessTests.cpp
(+8 files in other folders)
